2014-12-22      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/run:  changed name of python script.
	* gm2/examples/swig/strlen/MyStrLib.i:  deleted.
	* gm2/tools-src/createUlmSys:  added SYSTEM_UNIXFORK and
	  SYSTEM_UNIXSIGNAL.

2014-12-09      Gaius Mulley <gaius@gnu.org>

	* gm2/config-lang.in:  added new gm2/examples/shared,
	  gm2/examples/full-strlib and gm2/examples/strio examples to the
	  list of Makefiles to be generated via configure.
	* gm2/examples/swig/exceptions/Makefile.in:  rewritten to use
	  libtool.
	* gm2/examples/swig/exceptions/stresstiny.py:  removed unnecessary
	  qualification.
	* gm2/examples/swig/exceptions/testtiny.py:  removed unnecessary
	  qualification.
	* gm2/examples/swig/exceptions/tiny.def:  renamed to libtiny.def.
	* gm2/examples/swig/exceptions/tiny.mod:  renamed to libtiny.mod.
	* gm2/examples/swig/strio/Makefile:  deleted.
	* gm2/examples/swig/strlib/Makefile.in:  rewritten to use libtool.
	* gm2/examples/swig/strlib/MyStrLib.def:  renamed as libStrLib.def.
	* gm2/examples/swig/strlib/MyStrLib.mod:  renamed as libStrLib.mod.
	* gm2/gm2.texi:  rewritten sections on building shared libraries
	  and interface to python using swig given that gm2 now uses libtool.

2014-12-06      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/swig/dual/Makefile.in:  removed unnecessary $(RM).
	* gm2/examples/swig/tiny/Makefile.in:  removed unnecessary $(RM).
	* gm2/lang-specs.h:  changed invocation of -fswig, -fmakelist, -fmakeinit which
	  can only be issued with -c and none of them will generate a .s (or .o) file.
	  The compiler is disabled from producing an output file using %V.

2014-12-05      Gaius Mulley <gaius@gnu.org>

	* gm2/config-lang.in:  added entry for new test example dual.
	* gm2/examples/hello/Makefile.in:  fixed example to build, added
	  reference to stdc++.
	* gm2/examples/pge/Makefile.in:  changed name of pge.py to pgepygame.py.
	* gm2/examples/pge/pge.py:  first cut of a python interface to pge.