@@ -1,3 +1,8 @@
+2014-12-24      Gaius Mulley <gaius@gnu.org>
+
+	* libgm2/sckt.c:  added conditional import of
+	  stdio.h as reported by Christoph Schlegel.
+
 2014-12-23      Gaius Mulley <gaius@gnu.org>
 
 	* libgm2/libulm/Makefile.am:  added pim libs to the
